--- a/css/style-b.css
+++ b/css/style-b.css
@@ -106,7 +106,7 @@ body {
   /* width: 100%; */
   /* height: 100%; */
   object-fit: cover;
-  object-position: center center;
+  object-position: center center; 
 }
 
 .preview-row {
@@ -149,6 +149,7 @@ body {
   object-fit: cover;
 }
 
+
 /* project頂部的icon */
 .large-icon {
   font-size: 28px;
@@ -158,10 +159,10 @@ body {
   width: 300px;
 } */
 
+
 /* 
 我的專案帳務資訊 */
-@media (max-width: 767px) {
-  /* 使用适当的断点 */
+@media (max-width: 767px) { /* 使用适当的断点 */
   .table-responsive {
     overflow-x: auto; /* 横向滚动，以显示溢出内容 */
   }
@@ -195,71 +196,65 @@ body {
   width: 60px !important;
 }
 
-.ab-w-10 {
-  width: 100px;
+.ab-w-10{
+width: 100px;
 }
-.ab-w-15 {
+.ab-w-15{
   width: 150px;
 }
-.ab-w-22 {
+.ab-w-22{
   width: 220px;
 }
 
 /* 個人資料 */
-.ab-selfie-size {
+.ab-selfie-size{
   max-width: 190px !important; /* 設定最大寬度，你可以根據需要調整 */
   max-height: 190px !important; /* 設定最大高度，你可以根據需要調整 */
-  overflow: hidden !important;
+  overflow: hidden;
+ 
 }
 
-.ab-selfie-size img {
+.ab-selfie-size img{
   object-fit: contain;
   object-position: center;
   
 }
 
 /* 分析報表 */
-.chart-size {
-  max-width: 500px;
-  max-height: 500px;
+.chart-size{
+ max-width: 500px;
+ max-height: 500px;
 }
 
 /* log in page */
-.login-wrapper form {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 500px;
+
+.wrapper form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
 }
 
-.login-wrapper img {
-  position: absolute;
-  width: 100% !important;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
+.wrapper img {
+    position: absolute;
+    width: 100% !important;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
 }
 
 @media (max-width: 576px) { /* 使用适当的断点 */
-.login-wrapper form {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 300px;
-  }
+  .wrapper form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+}
 }
 
 
 .ab-input-width{
-width: 400px;
-}
-.selected {
-  background-color:#6c757d !important;
-  color: #ffffff !important;
-}
-
-.max-height-100 {
-  max-height: 100px;
+  width: 400px;
 }
